--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 
   <!-- Add these scripts to the bottom of the body -->
-  <script src="https://unpkg.com/react@^18/umd/react.production.min.js"></script>
+  <!-- <script src="https://unpkg.com/react@^18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@^18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/decap-cms-app/dist/decap-cms-app.js"></script>
+  <script src="https://unpkg.com/decap-cms-app/dist/decap-cms-app.js"></script> -->
   <!-- Initialize the CMS -->
-  <script>
+  <!-- <script>
     DecapCmsApp.init();
-  </script>
+  </script> -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
