--- a/index.html
+++ b/index.html
@@ -5,22 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="/src/index.css" rel="stylesheet">
   <title>Vite + React</title>
 </head>
-
 <body>
   <div id="root"></div>
-
-
-  <!-- Add these scripts to the bottom of the body -->
-  <!-- <script src="https://unpkg.com/react@^18/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@^18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/decap-cms-app/dist/decap-cms-app.js"></script> -->
-  <!-- Initialize the CMS -->
-  <!-- <script>
-    DecapCmsApp.init();
-  </script> -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
